<resources>
  <string name="app_name">Math and Numbers</string>

  <string name="action_settings">Settings</string>
  <string name="action_exit">Exit</string>
  <string name="action_start">Start</string>

  <string name="main_frag_button_exit">Exit</string>
  <string name="main_frag_button_settings">Settings</string>
  <string name="main_frag_button_start">Start</string>

  <string name="settings_pref_frag_title">Settings</string>
  <string name="settings_pref_frag_category_addition">Addition</string>
  <string name="settings_pref_frag_category_subtraction">Subtraction</string>
  <string name="settings_pref_frag_category_multiplication">Multiplication</string>
  <string name="settings_pref_frag_category_division">Division</string>
  <string name="settings_pref_frag_screen_whole_number_title">Whole Number Arithmetic Operations</string>
  <string name="add_sub_pref_title">Addition/Subtraction</string>
  <string name="add_sub_pref_key">add_sub_pref</string>
  <string name="add_sub_pref_summary">Options for Addition and Subtraction</string>
  <string name="mul_div_pref_key">mul_div_pref</string>
  <string name="mul_div_pref_title">Multiplication/Division</string>
  <string name="mul_div_pref_summary">Options for Multiplication and Division</string>

  <string name="add_sub_pref_frag_title">Addition and Subtraction</string>
  <string name="mul_div_pref_frag_title">Multiplication and Division</string>

  <string name="sw_pref_title">Enable</string>
  <string name="sw_pref_add_key">sw_pref_add_key</string>
  <string name="sw_pref_sub_key">sw_pref_sub_key</string>
  <string name="sw_pref_mul_key">sw_pref_mul_key</string>
  <string name="sw_pref_div_key">sw_pref_div_key</string>

  <string name="check_pref_carry_title">Carry</string>
  <string name="check_pref_remainder_title">Remainder</string>
  <string name="check_pref_add_carry_key">check_pref_add_carry_key</string>
  <string name="check_pref_sub_carry_key">check_pref_sub_carry_key</string>
  <string name="check_pref_multi_carry_key">check_pref_multi_carry_key</string>
  <string name="check_pref_div_remainder_key">check_pref_div_remainder_key</string>
  <string name="question_type_key_carry">carry</string>
  <string name="ques_frag_operand_one">Operand1</string>
  <string name="ques_frag_operand_two">Operand2</string>
  <string name="ques_frag_answer_hint">Your Answer Here</string>

  <string name="list_pref_num_operands_title">Operands</string>
  <string name="list_pref_num_operands_summary">Specify the maximum number of operands to appear in this type of question</string>
  <string name="list_pref_operands_dialog_title">Number of Operands</string>
  <string name="list_pref_num_digits_title">Digits</string>
  <string name="list_pref_num_digits_summary">Specify the maximum number of digits</string>
  <string name="list_pref_digits_dialog_title">Maximum Number of Digits</string>

  <string name="list_pref_add_operands_key">list_pref_add_operands_key</string>
  <string name="list_pref_sub_operands_key">list_pref_sub_operands_key</string>
  <string name="list_pref_div_operands_key">list_pref_div_operands_key</string>
  <string name="list_pref_mul_operands_key">list_pref_mul_operands_key</string>
  <string name="list_pref_add_digits_key">list_pref_add_digits_key</string>
  <string name="list_pref_sub_digits_key">list_pref_sub_digits_key</string>
  <string name="list_pref_mul_digits_key">list_pref_mul_digits_key</string>
  <string name="list_pref_div_digits_key">list_pref_div_digits_key</string>

  <string name="dialog_quit_title">Exiting the Application</string>
  <string name="dialog_quit_message">Are you sure you want to quit?</string>
  <string name="dialog_invalid_settings_title">Invalid Settings!</string>
  <string name="dialog_invalid_settings_message">No question types specified!</string>
  <string name="dialog_correct_title">Correct!</string>
  <string name="dialog_incorrect_title">Incorrect!</string>
  <string name="dialog_show_answer_title">Answer is</string>

  <string name="dialog_button_show_answer">Reveal Answer</string>
  <string name="dialog_button_settings">Settings</string>
  <string name="dialog_button_yes">Yes</string>
  <string name="dialog_button_cancel">Cancel</string>
  <string name="dialog_button_close">Close</string>
  <string name="dialog_button_next_question">Next Question</string>
  <string name="ques_frag_remainder_label">" R "</string>
  <string name="ques_frag_remainder_view_hint">Remainder</string>

</resources>
