<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/app_name"
    android:id="@+id/textView"
    android:layout_gravity="center_horizontal"/>

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_frag_button_start"
    android:id="@+id/main_act_button_start"
    android:layout_gravity="center"/>

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_frag_button_settings"
    android:id="@+id/main_act_button_settings"
    android:layout_gravity="center"/>

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_frag_button_exit"
    android:id="@+id/main_act_button_exit"
    android:layout_gravity="center"/>
</LinearLayout>
