<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:focusable="true"
  android:focusableInTouchMode="true">

  <TextView
    android:id="@+id/ques_frag_operand_one"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toLeftOf="@+id/ques_frag_operator"
    android:layout_alignBaseline="@+id/ques_frag_expr_equals"

    android:text="@string/ques_frag_operand_one"
    android:textAppearance="?android:attr/textAppearanceLarge"/>

  <TextView
    android:id="@+id/ques_frag_operator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toLeftOf="@+id/ques_frag_operand_two"
    android:layout_alignBaseline="@+id/ques_frag_expr_equals"

    android:text="Operator"
    android:textAppearance="?android:attr/textAppearanceLarge"/>

  <TextView
    android:id="@+id/ques_frag_operand_two"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toLeftOf="@+id/ques_frag_expr_equals"
    android:layout_alignBaseline="@+id/ques_frag_expr_equals"

    android:text="@string/ques_frag_operand_two"
    android:textAppearance="?android:attr/textAppearanceLarge"/>

  <TextView
    android:id="@+id/ques_frag_expr_equals"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="false"
    android:layout_alignParentTop="false"
    android:layout_alignWithParentIfMissing="false"
    android:layout_centerInParent="true"

    android:text="="
    android:textAppearance="?android:attr/textAppearanceLarge"/>

  <EditText
    android:id="@+id/ques_frag_answer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/ques_frag_expr_equals"
    android:layout_alignBaseline="@+id/ques_frag_expr_equals"

    android:background="@null"
    android:gravity="center"
    android:hint="@string/ques_frag_answer_hint"
    android:inputType="number"/>

</RelativeLayout>